@@ -20,6 +20,8 @@ package org.apache.lucene.benchmark.byTask.tasks;
 import org.apache.lucene.benchmark.byTask.PerfRunData;
 import org.apache.lucene.benchmark.byTask.utils.Config;
 import org.apache.lucene.codecs.Codec;
+import org.apache.lucene.codecs.PostingsFormat;
+import org.apache.lucene.codecs.lucene49.Lucene49Codec;
 import org.apache.lucene.index.ConcurrentMergeScheduler;
 import org.apache.lucene.index.IndexCommit;
 import org.apache.lucene.index.IndexDeletionPolicy;
@@ -132,6 +134,21 @@ public class CreateIndexTask extends PerfTask {
         iwConf.setCodec(clazz.newInstance());
       } catch (Exception e) {
         throw new RuntimeException("Couldn't instantiate Codec: " + defaultCodec, e);
+      }
+    }
+
+    final String postingsFormat = config.get("codec.postingsFormat",null);
+    if (defaultCodec == null && postingsFormat != null) {
+      try {
+        final PostingsFormat postingsFormatChosen = PostingsFormat.forName(postingsFormat);
+        iwConf.setCodec(new Lucene49Codec(){
+          @Override
+          public PostingsFormat getPostingsFormatForField(String field) {
+            return postingsFormatChosen;
+          }
+        });
+      } catch (Exception e) {
+        throw new RuntimeException("Couldn't instantiate Postings Format: " + postingsFormat, e);
       }
     }
 
